--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,13 +1,64 @@
+
+.mytext{
+    font-family: 'Gilroy-Bold';
+    /* mix-blend-mode: difference; */
+}
+
 .heroContainer{
-    border: 2px solid red;
     height: 100vh;
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
+@font-face {
+    font-family: 'Gilroy-Bold';
+    src: local('Gilroy-Bold'), url(/gilroy/Gilroy-Bold.ttf) format('truetype');
+  }
+  
+  @font-face {
+    font-family: 'Gilroy-Medium';
+    src: local('Gilroy-Medium'), url(/gilroy/Gilroy-Medium.ttf) format('truetype');
+  }
+  
+  @font-face {
+    font-family: 'Gilroy-Light';
+    src: local('Gilroy-Light'), url(/gilroy/Gilroy-Light.ttf) format('truetype');
+  }
+
+
+@font-face {
+    font-family: 'GildaDisplay-Regular';
+    src: local('GildaDisplay-Regular'), url(/gilda/GildaDisplay-Regular.ttf) format('truetype');
+  }
+  
+  
+
 .heroImage{
     object-fit: cover;
+    width: 500px;
+    /* right: 150px;
+    bottom: -150px;
+    position: absolute; */
+    position: relative;
+    z-index: 0;
+    filter: grayscale(100%);
+    
+}
+
+.imageBorder{
+    width: 500px;
     height: 100%;
-    border: 2px solid blue;
+    position: absolute;
+    z-index: 0;
+}
+
+
+
+.roamingText{
+    font-family: 'GildaDisplay-Regular';
+    /* color: red; */
+    color: #44403c;
+    
 }
