--- a/src/components/header/nav/Link/style.module.scss
+++ b/src/components/header/nav/Link/style.module.scss
@@ -12,21 +12,21 @@
         left: -30px;
     }
 }
-.rolling-text{
-    display: inline-block;
-    line-height: 100px;
-    height: 100px;
-    overflow: hidden;
-}
+// .rolling-text{
+//     display: inline-block;
+//     line-height: 100px;
+//     height: 100px;
+//     overflow: hidden;
+// }
 
-.rolling-text:hover .letter,
-.rolling-text.play .letter
-{
- transform: tranlateY(-100%);   
+// .rolling-text:hover .letter,
+// .rolling-text.play .letter
+// {
+//  transform: tranlateY(-100%);   
 
-}
+// }
 
-.rolling-text .letter{
-    display: inline-block;
-    transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1)
-}
+// .rolling-text .letter{
+//     display: inline-block;
+//     transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1)
+// }
