--- a/src/components/header/nav/style.module.scss
+++ b/src/components/header/nav/style.module.scss
@@ -1,11 +1,13 @@
 .menu{
     height: 100vh;
     width: 100%;
-    background-color: rgb(41, 41, 41);
+    background-color: #44403c;
+    font-family: 'Gilroy-Bold';
     position: fixed;
     right: 0;
     top: 0;
     color: white;
+    z-index: 99;
 
     .body{
         box-sizing: border-box;
@@ -17,7 +19,6 @@
 
         .nav{
             display: flex;
-            
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -32,18 +33,12 @@
                 font-size: 11px;
                 margin-bottom: 40px;
                 width: 100%;
-                
             }
-
             a{
                 text-decoration: none;
                 color: white;
                 font-weight: 300;
-
-            }
-
-            
-            
+            }            
         }
     }
 }
