--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -2,33 +2,38 @@
     padding: 30px;
     position: fixed;
     right: 0;
-    z-index: 1;
-
+    z-index: 100;
+    mix-blend-mode: difference;
+    
     .button{
         width: 80px;
         height: 80px;
         border-radius: 50%;
-        background-color: #455CE9;
+        
+        // background-color: #ffffff;
         cursor: pointer;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center;        
     }
 
     .burger{
         width: 100%;
+
         &::after, &::before{
             content: "";
             display: block;
-            height: 1px;
+            height: 3px;
             width: 40%;
             margin: auto;
             background-color: white;
             position: relative;
             transition: transform 0.3s;
+            mix-blend-mode: difference;
         }
 
         &::after{
+
             top: -5px;
         }
 
@@ -36,18 +41,46 @@
             top: 5px;
         }
     }
+    .burger:hover::after, .burger:hover::before{
+        background-color: white;
+        z-index: 99999;
+    }
 
     .burgerActive{
 
         &::after{
             transform: rotate(45deg);
             top: -1px;
+
         }
 
         &::before{
             transform: rotate(-45deg);
             top: 0px;
+
+
         }
         
     }
+
+
+    .burgerActive::after, .burgerActive::before{
+        background: white;
+    }
+
+
+    .bounds{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: all;
+
+        &:hover{
+            transform: scale(3);
+        }
+    }
+
+    
 }
