--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,7 @@
 
 .mytext{
     font-family: 'Gilroy-Bold';
-    /* mix-blend-mode: difference; */
+    mix-blend-mode: exclusion;
 }
 
 .heroContainer{
@@ -37,14 +37,12 @@
 
 .heroImage{
     object-fit: cover;
-    width: 500px;
-    /* right: 150px;
-    bottom: -150px;
-    position: absolute; */
+    /* width: 500px; */
     position: relative;
     z-index: 0;
-    filter: grayscale(100%);
-    
+    object-fit: cover;
+    mix-blend-mode: difference;
+    filter: grayscale(100%)
 }
 
 .imageBorder{
@@ -58,7 +56,23 @@
 
 .roamingText{
     font-family: 'GildaDisplay-Regular';
-    /* color: red; */
-    color: #44403c;
+
+
     
+}
+
+
+.circle1{
+  animation: moving 10s infinite cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+@keyframes moving{
+  0%{
+    transform: translateX(0px);
+  }
+  50%{
+    transform: translateX(800px);
+  }
+  100%{
+    transform: translateX(0px);
+  }
 }
