--- a/src/globals.css
+++ b/src/globals.css
@@ -10,3 +10,25 @@
 :root{
   background: #ffffff;
 }
+
+
+
+.slide-in{
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100vh;
+  background: black;
+  transform-origin: bottom;
+}
+
+.slide-out{
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100vh;
+  background: black;
+  transform-origin: top;
+}
